# unstructured-io-demo

./: .env.sample  .gitignore  Dockerfile  README.md  app.py  google_drive_ingest.py  pyproject.toml  requirements.txt  unstructed_requirements.txt
.github/workflows/: yaml_to_act.yml
data/: df2.csv
data_ingest/: test_data.csv  unstructed_ingest.py
data_ingest/raptor/: ingest.py  raptor.py
langchain_components/: ingest.py  replier.py
